Moved index page css to index-page.css file

--- a/src/main/webapp/css/index-page.css
+++ b/src/main/webapp/css/index-page.css
@@ -14,20 +14,7 @@
  * limitations under the License.
  */
 
-/* Prevent the page from becoming too wide. */
-body {
-  max-width: 600px;
-}
-
-/* Remove bullet points from navigation bar. */
-nav ul {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-
-/* Keep navigation menu on one line. */
-nav li {
-  display: inline-block;
-  margin-right: 10px
+/* Change the index page background. */
+body{
+	  background: url("../images/index-background.jpg");     
 }
