--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -15,9 +15,11 @@
  */
 
 /* Prevent the page from becoming too wide. */
-body {
+
+
+/* body {
   max-width: 600px;
-}
+} */
 
 /* Remove bullet points from navigation bar. */
 nav ul {
