Edited the css of navbar and changed background

--- a/src/main/webapp/css/index-page.css
+++ b/src/main/webapp/css/index-page.css
@@ -16,5 +16,5 @@
 
 /* Change the index page background. */
 body{
-	  background: url("../images/index-background.jpg");     
+	  background-color: #333;
 }
