--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -44,7 +44,7 @@ nav li {
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: right;
+  float: left;
   color: #f2f2f2;
   padding: 14px 16px;
   text-decoration: none;
