--- a/src/main/webapp/css/index-page.css
+++ b/src/main/webapp/css/index-page.css
@@ -15,9 +15,6 @@
  */
 
 /* Change the index page background. */
-body{
-	  background: url("../images/index-1.jpg");
-}
 
 .container {
     padding: 80px 120px;
@@ -63,3 +60,137 @@ body{
       background-color: #fff;
       color: #000;
     }
+	
+	
+	
+body
+{
+	background-image:url("../images/giphy.gif");
+	  /* Full height */
+	height: 100%; 
+
+	/* Center and scale the image nicely */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+html {
+width: 100%;
+height: 100%;
+clip: auto;
+position: absolute;
+overflow: hidden;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position:fixed;
+  top:0;
+  width:100%;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+.active {
+  background-color: #4CAF50;
+}
+li {
+  border-right: 1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+.headings
+{
+	transform:translate(30%,70%);
+	color:white;
+}
+
+.content
+{
+	width:90%;
+	height:70%;
+	transform:translate(5%,6%);
+	
+	position:fixed;
+	display:flex;
+	justify-content: space-around;
+	align-items:center;
+}
+.kolom
+{
+	width:28%;
+	height:90%;
+	
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	flex-wrap:wrap;
+	overflow:hidden;
+	opacity: 0.8;
+	transition:0.3s ease;
+}
+.kolom:hover
+{ 
+	width:30%;
+	height:100%;
+}
+
+.kolom:hover img{
+	transform: rotate(30deg);
+}
+.kolom .atas
+{
+	width:100%;
+	height:60%;
+	background:#2c3e50;
+	display:flex;
+	justify-content:center;
+	align-items: center;
+	
+
+}
+.kolom .atas img
+{
+	
+	width:40%;
+	transition:2.5s ease;
+}
+.kolom .tengah
+{
+	width:100%;
+	height:10%;
+	background:#fff;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	
+}
+.kolom .bawah
+{
+	width:100%;
+	height:30%;
+	background:#f0f0f0;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	
+}
