--- a/src/main/webapp/css/aboutus.css
+++ b/src/main/webapp/css/aboutus.css
@@ -1,32 +1,86 @@
-/*
- * Copyright 2019 Google Inc.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+body
+{
+	background-image:url("../images/giphy.gif");
+	background-color: rgba(248, 24, 20, 0.2);
+	  /* Full height */
+	height: 160%; 
 
-  .bg-1 {
-    background-color: #000000;
-    color: #ffffff;
-  }
-  .bg-2 {
-    background-color: #808080;
-    color: #ffffff;
-  }
-  .bg-3 {
-    background-color: #fff;
-    color: #555555;
-  }
+	/* Center and scale the image nicely */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	
+}
+html 
+{
+width: 100%;
+height: 100%;
+clip: auto;
+position: absolute;
+overflow: hidden;
+}
+.heading
+{
+	transform:translate(10px,30px);
+	text-align:center;
+	color:white;
+}
+.column {
+  float: left;
+  width: 25%;
+  padding: 5px;
+  flex: 25.33%;
+}
 
-  img {
-    margin:0 80px 0 0;
-  }
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.row {
+  display: flex;
+  transform:translate(0%,40%);
+  
+}
+.container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 400%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+.container {
+   display: inline-block;
+}
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-10%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: black;
+  color: white;
+  font-size: 18px;
+  padding: 16px 32px;
+}
