--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -38,7 +38,7 @@ nav li {
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #080000 ;
+  background-color: #333;
   overflow: hidden;
 }
 
@@ -53,8 +53,8 @@ nav li {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #111;
+  color: white;
 }
 
 /* Add a color to the active/current link */
