--- a/src/main/webapp/css/opportunities.css
+++ b/src/main/webapp/css/opportunities.css
@@ -116,7 +116,101 @@ body {
   } 
 
 
-
+  .opportunity-title{
+	font-family:"Quan-SemiLight", Helvetica, sans-serif;
+	text-rendering:optimizelegibility;
+	color:#8d2165 ;
+  }
+  
+  .OpportunityImage{
+	max-height: 600px;
+  }
+  
+  .blackText{
+	  color:black;
+	  size:10px;
+  }
+  
+  #applyButton{
+	  display: block;
+	  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	  font-weight: 600;
+	  text-transform: uppercase;
+	  font-size: .75em;
+	  letter-spacing: 1px;
+	  height: 38px;
+	  width: 120px;
+	  line-height: 38px;
+	  overflow: hidden;
+	  background: #4dbecf;
+	  border-radius: 3px;
+	  cursor: pointer;
+	  transition: all .3s ease;
+  }
+  
+  #applyButtonText{
+	  display: block;
+	  color: white;
+	  text-align: center;
+	  text-decoration: none;
+  }
+  
+  #myInput {
+	background-image: url('https://www.w3schools.com/css/searchicon.png'); /* Add a search icon to input */
+	background-position: 10px 12px; /* Position the search icon */
+	background-repeat: no-repeat; /* Do not repeat the icon image */
+	width: 100%; /* Full-width */
+	font-size: 16px; /* Increase font-size */
+	padding: 12px 20px 12px 40px; /* Add some padding */
+	border: 1px solid #ddd; /* Add a grey border */
+	margin-bottom: 12px; /* Add some space below the input */
+  }
+  
+  #loader {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	z-index: 1;
+	width: 150px;
+	height: 150px;
+	margin: -75px 0 0 -75px;
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 120px;
+	height: 120px;
+	-webkit-animation: spin 2s linear infinite;
+	animation: spin 2s linear infinite;
+  }
+  
+  @-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); } 
+	100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
+  
+  /* Add animation to "page content" */
+  .animate-bottom {
+	position: relative;
+	-webkit-animation-name: animatebottom;
+	-webkit-animation-duration: 1s;
+	animation-name: animatebottom;
+	animation-duration: 1s
+  }
+  
+  @-webkit-keyframes animatebottom {
+	from { bottom:-100px; opacity:0 } 
+	to { bottom:0px; opacity:1 }
+  }
+  
+  @keyframes animatebottom { 
+	from{ bottom:-100px; opacity:0 } 
+	to{ bottom:0; opacity:1 }
+  }
 
 
 
