--- a/src/main/webapp/css/index-page.css
+++ b/src/main/webapp/css/index-page.css
@@ -75,11 +75,11 @@ body
 	background-size: cover;
 }
 html {
-width: 100%;
-height: 100%;
-clip: auto;
-position: absolute;
-overflow: hidden;
+	width: 100%;
+	height: 100%;
+	clip: auto;
+	position: absolute;
+	overflow: hidden;
 }
 ul {
   list-style-type: none;
@@ -120,22 +120,25 @@ li:last-child {
 }
 .headings
 {
-	transform:translate(30%,70%);
-	color:white;
+	text-align: center;
+    padding-bottom: 0%;
+    /* margin: auto; */
+    transform: translateY(30px);
+    /* transform: translate(30%,70%); */
+    color: white;
 }
 
 .content
 {
-	width:90%;
-	height:70%;
-	transform:translate(5%,6%);
-	
-	position:fixed;
+	width:80%;
+	height:50%;
+	transform:translate(11%,6%);
+	position:absolute;
 	display:flex;
 	justify-content: space-around;
 	align-items:center;
 }
-.kolom
+.box
 {
 	width:28%;
 	height:90%;
@@ -148,16 +151,16 @@ li:last-child {
 	opacity: 0.8;
 	transition:0.3s ease;
 }
-.kolom:hover
+.box:hover
 { 
 	width:30%;
 	height:100%;
 }
 
-.kolom:hover img{
+.box:hover img{
 	transform: rotate(30deg);
 }
-.kolom .atas
+.box .image
 {
 	width:100%;
 	height:60%;
@@ -168,13 +171,13 @@ li:last-child {
 	
 
 }
-.kolom .atas img
+.box .image img
 {
 	
-	width:40%;
+	width:30%;
 	transition:2.5s ease;
 }
-.kolom .tengah
+.box .title
 {
 	width:100%;
 	height:10%;
@@ -184,7 +187,7 @@ li:last-child {
 	align-items:center;
 	
 }
-.kolom .bawah
+.box .description
 {
 	width:100%;
 	height:30%;
