--- a/src/main/webapp/css/index-page.css
+++ b/src/main/webapp/css/index-page.css
@@ -73,6 +73,8 @@ body
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+    background-attachment: fixed;
+
 }
 html {
 	width: 100%;
